--- a/open-api.yml
+++ b/open-api.yml
@@ -115,8 +115,20 @@ paths:
           type: "integer"
           format: "int64"
       responses:
-        "405":
-          description: "Invalid input"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Item not found"
+        "500":
+          description: "Internal Server Error"
+        "200":
+          description: "Item was updated"
+          content:
+            application/json:
+              schema:
+                properties:
+                  message: 
+                    type: string
     delete:
       tags:
       - "item"
@@ -141,6 +153,16 @@ paths:
           description: "Invalid ID supplied"
         "404":
           description: "Item not found"
+        "500":
+          description: "Internal Server Error"
+        "200":
+          description: "Item deleted"
+          content: 
+            application/json:
+              schema:
+                properties:
+                  message:
+                    type: string
   /item/{itemId}/uploadImage:
     post:
       tags:
@@ -168,24 +190,8 @@ paths:
             application/json:
               schema:
                 type: string
-  /store/inventory:
-    get:
-      tags:
-      - "store"
-      summary: "Returns item inventories by status"
-      description: "Returns a map of status codes to quantities"
-      operationId: "getInventory"
-      parameters: []
-      responses:
-        "200":
-          description: "successful operation"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                additionalProperties:
-                  type: "integer"
-                  format: "int32"
+        "500":
+          description: "Internal Server Error"
   /store/order:
     post:
       tags:
@@ -255,6 +261,16 @@ paths:
           description: "Invalid ID supplied"
         "404":
           description: "Order not found"
+        "500": 
+          description: "Internal server error"
+        "200":
+          description: "Order deleted"
+          content:
+            application/json:
+              schema:
+                properties:
+                  message:
+                    type: string
   /user:
     post:
       tags:
@@ -268,8 +284,12 @@ paths:
             schema:
               $ref: "#/components/schemas/User"
       responses:
-        default:
-          description: "successful operation"
+        "201": 
+          description: "user successfully created"
+        "500": 
+          description: "internal server error"
+        "422":
+          description: "duplicate username or email"
   /user/login:
     put:
       tags:
@@ -302,6 +322,8 @@ paths:
                 format: "date-time"
         "400":
           description: "Invalid username/password supplied"
+        "500":
+          description: "Internal server errror"
   /user/{username}/logout:
     delete:
       tags:
@@ -317,8 +339,10 @@ paths:
         schema:
           type: string
       responses:
-        default:
-          description: "successful operation"
+        "204": 
+          description: "user logged out"
+        "500":
+          description: "Internal server error"
   /user/{username}:
     get:
       tags:
@@ -344,6 +368,8 @@ paths:
           description: "Invalid username supplied"
         "404":
           description: "User not found"
+        "500": 
+          description: "Internal server error"
     put:
       tags:
       - "user"
@@ -367,6 +393,15 @@ paths:
           description: "Invalid user supplied"
         "404":
           description: "User not found"
+        "403": 
+          description: "User not authorized"
+        "401": 
+          description: "User not authenticated"
+        "204":
+          description: "Successful update of User"
+        "500":
+          description: "Internal server error"
+        
     delete:
       tags:
       - "user"
@@ -385,6 +420,14 @@ paths:
           description: "Invalid username supplied"
         "404":
           description: "User not found"
+        "500":
+          description: "Internal server error"
+        "204":
+          description: "user was deleted"
+        "403":
+          description: "Not authorized to delete user"
+        "401": 
+          description: "Must be logged in to perform action"
 components:
   schemas:
     User:
