--- a/package.json
+++ b/package.json
@@ -6,18 +6,28 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "serve": "ts-node api/"
   },
   "dependencies": {
+    "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.12.5",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.2",
-    "nuxt": "^2.14.12"
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "nuxt": "^2.14.12",
+    "openapi-enforcer": "^1.13.3",
+    "openapi-enforcer-middleware": "^2.0.0-alpha-7"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1"
+    "express": "^4.17.1",
+    "node-ts": "^5.1.1",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.5"
   }
 }
