--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "core-js": "^3.8.2",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.18",
     "nuxt": "^2.14.12",
     "openapi-enforcer": "^1.13.3",
     "openapi-enforcer-middleware": "^2.0.0-alpha-7"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.3",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "express": "^4.17.1",
