--- a/api/open-api.yml
+++ b/api/open-api.yml
@@ -198,9 +198,9 @@ paths:
     post:
       tags:
       - "store"
-      summary: "Place an order for a item"
+      summary: "Place an order with items"
       description: ""
-      operationId: "placeOrder"
+      operationId: "createOrder"
       x-controller: orders
       x-operation: createOrder
       requestBody:
@@ -232,10 +232,7 @@ paths:
         description: "ID of item that needs to be fetched"
         required: true
         schema:
-          type: "integer"
-          maximum: 10.0
-          minimum: 1.0
-          format: "int64"
+          type: "string"
       responses:
         "200":
           description: "successful operation"
@@ -261,9 +258,7 @@ paths:
         description: "ID of the order that needs to be deleted"
         required: true
         schema:
-          type: "integer"
-          minimum: 1.0
-          format: "int64"
+          type: "string"
       responses:
         "400":
           description: "Invalid ID supplied"
@@ -474,114 +469,113 @@ paths:
           description: "user logged out"
         "500":
           description: "Internal server error"
-  components:
-  schemas:
-    User:
-        properties:
-          id:
-            type: integer
-            readOnly: true
-          username:
-            type: string
-          email:
-            type: string
-          password:
-            type: string
-            writeOnly: true
-          fname:
-            type: string
-          lname:
-            type: string
-          phone:
-            type: number
-          addresses:
-            type: array
-            items:    
+components:
+    schemas:
+      User:
+          properties:
+            id:
+              type: integer
+              readOnly: true
+            username:
+              type: string
+            email:
+              type: string
+            password:
+              type: string
+              writeOnly: true
+            fname:
+              type: string
+            lname:
+              type: string
+            phone:
+              type: number
+            addresses:
+              type: array
+              items:    
+                allOf:
+                  - $ref: '#/components/schemas/Address'
+      Item:
+          properties:
+            id:
+              type: integer
+              readOnly: true
+            name:
+              type: string
+            price:
+              type: number
+            category:
+              type: string
+            descrition:
+              type: string
+            imageUrl:
+              type: string
+            stock: 
+              type: number
+            sizes: 
               allOf:
-                - $ref: '#/components/schemas/Address'
-    Item:
+                - $ref: '#/components/schemas/Sizes'
+            promotionalFlag:
+              type: boolean
+            promotionalPrice:
+              type: number
+      Sizes:
+        type: array  
+        items:
+          type: string
+      Order:
         properties:
-          id:
-            type: integer
-            readOnly: true
-          name:
+          _id:
             type: string
+            readOnly: true
           price:
             type: number
-          category:
+          dateCreated:
             type: string
-          descrition:
-            type: string
-          imageUrl:
-            type: string
-          stock: 
-            type: number
-          sizes: 
-            allOf:
-              - $ref: '#/components/schemas/Sizes'
-          promotionalFlag:
+            readOnly: true
+          inPersonPickup:
             type: boolean
-          promotionalPrice:
+          expectedArrivalDate:
+            type: string
+            readOnly: true
+          label:
+            type: string
+            readOnly: true
+          trackingId:
+            type: string
+            readOnly: true
+          # items:
+          #   type: array
+          #   items:
+          #     $ref: '#/components/schemas/Item'
+          status:
+            type: string
+            readOnly: true
+          # address:
+          #     $ref: '#/components/schemas/Address'
+          userId:
+            type: string
+      Address:
+        type: object
+        properties:
+          street1:
+            type: string
+          street2:
+            type: string
+          city:
+            type: string
+          state:
+            type: string
+          zip:
             type: number
-    Sizes:
-      type: array  
-      items:
-        type: string
-    Order:
-      properties:
-        id:
-          type: integer
-          readOnly: true
-        price:
-          type: number
-        dateCreated:
-          type: string
-          readOnly: true
-        inPersonPickup:
-          type: boolean
-        expectedArrivalDate:
-          type: string
-          readOnly: true
-        label:
-          type: string
-          readOnly: true
-        trackingId:
-          type: string
-          readOnly: true
-        items:
-          type: array
-          items:
-            $ref: '#/components/schemas/Item'
-        status:
-          type: string
-          readOnly: true
-        address:
-          allOf:
-            - $ref: '#/components/schemas/Address'
-        userid:
-          type: string
-    Address:
-      type: object
-      properties:
-        street1:
-          type: string
-        street2:
-          type: string
-        city:
-          type: string
-        state:
-          type: string
-        zip:
-          type: number
-    Image:
-      type: object
-      properties:
-        name:
-          type: string
-        base64:
-          type: string
-        type: 
-          type: string
+      Image:
+        type: object
+        properties:
+          name:
+            type: string
+          base64:
+            type: string
+          type: 
+            type: string
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
