--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,21 @@ version: '3.8'
 #   mongo-volume:
 
 services:
-  database:
+
+  mongo-express:
+    image: mongo-express
+    environment:
+      # - ME_CONFIG_OPTIONS_EDITORTHEME=ambiance
+      - ME_CONFIG_MONGODB_SERVER=db
+      - ME_CONFIG_BASICAUTH_USERNAME=caps-secret-admin
+      - ME_CONFIG_BASICAUTH_PASSWORD=caps-secret-admin-pwd
+    ports:
+      - '8081:8081'
+
+  db:
     image: 'mongo'
     restart: always
-    container_name: mongo-caps # container name
+    container_name: mongo-caps
     environment:
       - MONGO_INITDB_DATABASE=caps-store
       - MONGO_INITDB_ROOT_USERNAME=caps-secret-admin
