--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve": "ts-node api/"
   },
   "dependencies": {
+    "@nuxt/typescript-build": "^2.0.6",
     "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.12.5",
     "bootstrap": "^4.5.3",
