--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/typescript-build": "^2.0.6",
     "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.12.5",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.2",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^2.0.6",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.3",
     "eslint-config-prettier": "^7.1.0",
