--- a/api/open-api.yml
+++ b/api/open-api.yml
@@ -58,6 +58,12 @@ paths:
       x-operation: getItems
       security:
         - bearerAuth: []
+      parameters:
+      - name: "category"
+        in: "query"
+        description: "Category values that need to be considered for filter"
+        schema:
+          type: string
       responses:
         "200":
           description: "successful operation"
@@ -67,6 +73,8 @@ paths:
                 type: array
                 items:    
                   $ref: '#/components/schemas/Item'
+        "401":
+          description: "Must authenticate"
   /item/{itemId}:
     get:
       tags:
@@ -94,6 +102,8 @@ paths:
                 $ref: "#/components/schemas/Item"
         "400":
           description: "Invalid ID supplied"
+        "401":
+          description: "Must authenticate"
         "404":
           description: "Item not found"
     put:
@@ -121,6 +131,10 @@ paths:
       responses:
         "400":
           description: "Invalid ID supplied"
+        "401":
+          description: "Must authenticate"
+        "403":
+          description: "User does not have permission to access this resource"
         "404":
           description: "Item not found"
         "500":
@@ -158,6 +172,10 @@ paths:
       responses:
         "400":
           description: "Invalid ID supplied"
+        "401":
+          description: "Must authenticate"
+        "403":
+          description: "User does not have permission to access this resource"
         "404":
           description: "Item not found"
         "500":
@@ -200,6 +218,10 @@ paths:
             application/json:
               schema:
                 type: string
+        "401":
+          description: "Must authenticate"
+        "403":
+          description: "User does not have permission to access this resource"
         "500":
           description: "Internal Server Error"
   /order:
@@ -222,6 +244,8 @@ paths:
                 type: array
                 items:    
                   $ref: '#/components/schemas/Order'
+        "401":
+          description: "Must authenticate"
     post:
       tags:
       - "store"
@@ -246,6 +270,8 @@ paths:
                 $ref: "#/components/schemas/Order"
         "400":
           description: "Invalid Order"
+        "401":
+          description: "Must authenticate"
   /order/{orderId}:
     get:
       tags:
@@ -273,6 +299,8 @@ paths:
                 $ref: "#/components/schemas/Order"
         "400":
           description: "Invalid ID supplied"
+        "401":
+          description: "Must authenticate"
         "404":
           description: "Order not found"
     delete:
@@ -295,6 +323,8 @@ paths:
       responses:
         "400":
           description: "Invalid ID supplied"
+        "401":
+          description: "Must authenticate"
         "404":
           description: "Order not found"
         "500": 
@@ -312,9 +342,9 @@ paths:
       tags:
       - "order"
       summary: "Finds Orders by status"
-      description: "Multiple status values can be provided with comma separated strings"
+      description: "Multiple status values can be provided with pipe '|' separated strings"
       operationId: "findOrdersByStatus"
-      x-controller: items
+      x-controller: orders
       x-operation: getOrdersByStatus
       security:
         - bearerAuth: []
@@ -336,7 +366,40 @@ paths:
                   $ref: "#/components/schemas/Order"
         "400":
           description: "Invalid status value"
+        "401":
+          description: "Must authenticate"
+        "403":
+          description: "User does not have permission to access this resource"
   /user:
+    get:
+      tags:
+      - "user"
+      summary: "Get all users"
+      description: ""
+      operationId: "getUsers"
+      x-controller: users
+      x-operation: getUsers
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: "successful operation"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/User"
+        "400":
+          description: "Invalid username supplied"
+        "401": 
+          description: "User not authenticated"
+        "403": 
+          description: "User not authorized"
+        "404":
+          description: "User not found"
+        "500": 
+          description: "Internal server error"
     post:
       tags:
       - "user"
@@ -363,7 +426,7 @@ paths:
       - "user"
       summary: "Get user by user name"
       description: ""
-      operationId: "getUserByName"
+      operationId: "getUserByUsername"
       x-controller: users
       x-operation: getUserByUsername
       security:
@@ -384,6 +447,10 @@ paths:
                 $ref: "#/components/schemas/User"
         "400":
           description: "Invalid username supplied"
+        "401": 
+          description: "User not authenticated"
+        "403": 
+          description: "User not authorized"
         "404":
           description: "User not found"
         "500": 
@@ -415,8 +482,6 @@ paths:
           description: "Invalid user supplied"
         "404":
           description: "User not found"
-        "403": 
-          description: "User not authorized"
         "401": 
           description: "User not authenticated"
         "204":
@@ -453,6 +518,34 @@ paths:
           description: "Not authorized to delete user"
         "401": 
           description: "Must be logged in to perform action"
+  /user/{username}/orders:
+    get:
+      tags:
+      - "store"
+      summary: "Find orders belonging to a specific user"
+      operationId: "getOrdersOfUser"
+      x-controller: orders
+      x-operation: getOrdersOfUser
+      security:
+        - bearerAuth: []
+      parameters:
+      - name: username
+        in: path
+        required: true
+        description: the user identifier, as username 
+        schema:
+          type: string
+      responses:
+        "200":
+          description: "successful operation"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:    
+                  $ref: '#/components/schemas/Order'
+        "401":
+          description: "Must authenticate"
   /user/login:
     put:
       tags:
@@ -510,6 +603,8 @@ paths:
       responses:
         "204": 
           description: "user logged out"
+        "401":
+          description: "Must authenticate"
         "500":
           description: "Internal server error"
 components:
@@ -603,7 +698,7 @@ components:
             readOnly: true
           # address:
           #     $ref: '#/components/schemas/Address'
-          userId:
+          username:
             type: string
       Address:
         type: object
