--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxt/typescript-build": "^2.0.6",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
