--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@nuxt/typescript-build": "^2.0.6",
     "@nuxt/typescript-runtime": "^2.0.1",
-    "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/axios": "^5.13.1",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
