--- a/api/open-api.yml
+++ b/api/open-api.yml
@@ -420,6 +420,30 @@ paths:
           description: "internal server error"
         "422":
           description: "duplicate username or email"
+  /user/me:
+    get:
+      tags:
+      - "user"
+      summary: "Get the current logged-in user"
+      description: ""
+      operationId: "getCurrentUser"
+      x-controller: users
+      x-operation: getCurrentUser
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: "successful operation"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "401": 
+          description: "User not authenticated"
+        "404":
+          description: "User not found"
+        "500": 
+          description: "Internal server error"
   /user/{username}:
     get:
       tags:
