--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "serve": "ts-node api/"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxt/typescript-build": "^2.0.6",
     "@nuxt/typescript-runtime": "^2.0.1",
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/composition-api": "^0.22.3",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.5.3",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^2.0.6",
+    "@nuxt/types": "^2.14.6",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
@@ -35,7 +36,6 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "express": "^4.17.1",
-    "node-ts": "^5.1.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.5"
   }
