--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt-ts",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nuxt/typescript-build": "^2.0.6",
     "@nuxt/typescript-runtime": "^2.0.1",
+    "@nuxt/vue-app": "^2.15.3",
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/composition-api": "^0.22.3",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bootstrap": "^4.5.3",
