--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,12 @@ services:
 
   mongo-express:
     image: mongo-express
+    env_file: ./.env
     environment:
       # - ME_CONFIG_OPTIONS_EDITORTHEME=ambiance
       - ME_CONFIG_MONGODB_SERVER=db
-      - ME_CONFIG_BASICAUTH_USERNAME=caps-secret-admin
-      - ME_CONFIG_BASICAUTH_PASSWORD=caps-secret-admin-pwd
+      - ME_CONFIG_BASICAUTH_USERNAME=${DB_UNAME}
+      - ME_CONFIG_BASICAUTH_PASSWORD=${DB_PWD}
     ports:
       - '8081:8081'
 
@@ -19,12 +20,13 @@ services:
     image: 'mongo'
     restart: always
     container_name: mongo-caps
+    env_file: ./.env
     environment:
-      - MONGO_INITDB_DATABASE=caps-store
-      - MONGO_INITDB_ROOT_USERNAME=caps-secret-admin
-      - MONGO_INITDB_ROOT_PASSWORD=caps-secret-admin-pwd
+      - MONGO_INITDB_DATABASE=${DB_NAME}
+      - MONGO_INITDB_ROOT_USERNAME=${DB_UNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${DB_PWD}
     volumes:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init.mongo.js:ro
     #   - ./mongo-volume:/data/db
     ports:
-      - '27018:27017'
+      - '${DB_PORT}:27017'
