--- a/api/open-api.yml
+++ b/api/open-api.yml
@@ -601,9 +601,9 @@ paths:
         "400":
           description: "Invalid username/password supplied"
         "500":
-          description: "Internal server errror"
+          description: "Internal server error"
   /api/user/{username}/logout:
-    delete:
+    put:
       tags:
       - "user"
       summary: "Logs out current logged in user session"
