--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nuxt": "^2.14.12",
     "openapi-enforcer": "^1.13.3",
     "openapi-enforcer-middleware": "^2.0.0-alpha-7",
-    "vue-flip": "^1.0.2"
+    "vue-flip": "^1.0.2",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^2.0.6",
