Added functionality to update the user's address.

--- a/api/open-api.yml
+++ b/api/open-api.yml
@@ -732,7 +732,7 @@ components:
           state:
             type: string
           zip:
-            type: number
+            type: string
       Image:
         type: object
         properties:
