Fixed several profile page bugs & added order creation functionality.

--- a/api/open-api.yml
+++ b/api/open-api.yml
@@ -357,9 +357,9 @@ paths:
           content:
             application/json:
               schema:
-                type: "array"
-                items:
-                  $ref: "#/components/schemas/Order"
+                type: array
+                items:    
+                  $ref: '#/components/schemas/Order'
         "400":
           description: "Invalid status value"
         "401":
@@ -501,6 +501,11 @@ paths:
         description: "Quantity of the item to remove"
         schema:
           type: number
+      - name: "size"
+        in: "query"
+        description: "Size of the item to remove"
+        schema:
+          type: string
       responses:
         "400":
           description: "Invalid username supplied"
@@ -732,11 +737,14 @@ components:
               items:    
                 allOf:
                   - $ref: '#/components/schemas/Address'
+            cart:
+              type: array
+              items:    
+                $ref: '#/components/schemas/CartItem'
       Item:
           properties:
             _id:
               type: string
-              readOnly: true
             name:
               type: string
             price:
@@ -770,8 +778,6 @@ components:
           dateCreated:
             type: string
             readOnly: true
-          inPersonPickup:
-            type: boolean
           expectedArrivalDate:
             type: string
             readOnly: true
@@ -788,8 +794,8 @@ components:
           status:
             type: string
             readOnly: true
-          # address:
-          #     $ref: '#/components/schemas/Address'
+          address:
+              $ref: '#/components/schemas/Address'
           username:
             type: string
       CartItem:
